--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-div {
-    font-size: 1000pt;
+.guess {
+    display: flex;
+    flex-direction: row;
+    padding: 10px 10px 10px 10px;
+}
+.tile {
+    border-radius: 5px;
+    border-color: black;
+    background-color: lightgray;
 }
