--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@
     display: flex;
     flex-direction: row;
     padding: 10px 10px 10px 10px;
+    gap: 10px;
 }
 .tile {
-    border-radius: 5px;
-    border-color: black;
+    border-radius: 10px;
+    border: 5px solid black;
     background-color: lightgray;
+    height: 100px;
+    width: 100px;
 }
