--- a/style.css
+++ b/style.css
@@ -7,7 +7,16 @@
 .tile {
     border-radius: 10px;
     border: 5px solid black;
-    background-color: lightgray;
+    background-color: #f0f0f0;
     height: 100px;
     width: 100px;
+    font-size: 100px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 100px;  
+}
+
+.guess-group {
+    display: flex;
+    flex-direction: column;
 }
