--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 .tile {
     border-radius: 10px;
     border: 5px solid black;
-    background-color: #f0f0f0;
     height: 100px;
     width: 100px;
     font-size: 100px;
@@ -19,4 +18,12 @@
 .guess-group {
     display: flex;
     flex-direction: column;
+}
+
+h1 {
+    font-size: 20px;
+    font-weight: bold;
+}
+#suggested-guess {
+    font-size: 10px;
 }
