--- a/style.css
+++ b/style.css
@@ -1,18 +1,23 @@
 .guess {
+    margin: auto;
+}
+
+.guess {
     display: flex;
     flex-direction: row;
     padding: 10px 10px 10px 10px;
     gap: 10px;
 }
+
 .tile {
     border-radius: 10px;
     border: 5px solid black;
-    height: 100px;
-    width: 100px;
+    width: 15vw;
+    height: 15vw;
     font-size: 100px;
     text-align: center;
     vertical-align: middle;
-    line-height: 100px;  
+    line-height: 15vw;  
 }
 
 .guess-group {
