--- a/style.css
+++ b/style.css
@@ -2,6 +2,28 @@ main {
     padding: 10px 10px 10px 10px;
 }
 
+#user-input-container {
+    display: flex;
+    justify-content: center;
+}
+
+#user-input {
+    height: 3vw;
+    width: 15vw;
+    font-size: 3vw;
+}
+
+#submit {
+    width: 7vw;
+}
+
+#next-guess {
+    height: 5vw;
+    width: 100%;
+    /* width: 25vw; */
+    font-size: 3vw;
+}
+
 .guess-parent {
     margin: auto;
     width: 100vw;
@@ -12,17 +34,18 @@ main {
     flex-direction: row;
     padding: 10px 0px 10px 0px;
     gap: 10px;
+    justify-content: center;
 }
 
 .tile {
     border-radius: 10px;
     border: 5px solid black;
-    width: 15vw;
-    height: 15vw;
+    width: 10vw;
+    height: 10vw;
     font-size: 100px;
     text-align: center;
     vertical-align: middle;
-    line-height: 15vw;  
+    line-height: 10vw;  
 }
 
 .guess-group {
@@ -36,4 +59,6 @@ h1 {
 }
 #suggested-guess {
     font-size: 10px;
+    overflow-y: scroll;
+    height: 10vh;
 }
