--- a/style.css
+++ b/style.css
@@ -53,7 +53,11 @@ main {
 
 .hide {
     height: 0px;
-    opacity: 0;
+    display: none;
+}
+
+.hide section {
+    height: 0px;
     display: none;
 }
 
