--- a/main/main.css
+++ b/main/main.css
@@ -5,6 +5,10 @@
 #846A6A
 #353B3C */
 
+html {
+  font-family: 'Courier New', Courier, monospace;
+}
+
 body {
   margin: 0px;
   background-color: #A2999E;
@@ -38,7 +42,6 @@ a {
   display: block;
   content: '';
   width: 0;
-  /* width: 200px; */
   height: 3px;
   background: #EEF0F2;
   position: relative;
@@ -48,8 +51,6 @@ a {
 .load-bar:hover::after {
   width: 200px;
 }
-
-
 
 #projects {
   max-height: 30px;
@@ -64,7 +65,6 @@ a {
   transition: max-height 0.15s ease-out;
   overflow: hidden;
   background: #C6C7C4;
-  /* margin: 0px 10px 15px 0px; */
   display: flex;
   flex-direction: column;
 }
@@ -72,4 +72,25 @@ a {
 #projects:hover #list {
   max-height: 500px;
   transition: max-height 0.25s ease-in;
+}
+
+main article {
+  width: 80%;
+  text-align: center;
+  margin: auto;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+#intro {
+  font-size: 40pt;
+}
+
+.container {
+  height: 500px;
+  width: 90%;
+  align-self: center;
+  background-color: #C6C7C4;
+  padding: 10px 10px 10px 10px;
 }
