--- a/main/main.css
+++ b/main/main.css
@@ -88,7 +88,7 @@ main article {
 }
 
 .container {
-  height: 500px;
+  height: 90vh;
   width: 90%;
   align-self: center;
   background-color: #C6C7C4;
