update about me and styling

--- a/main/main.css
+++ b/main/main.css
@@ -78,7 +78,7 @@ main article {
   width: 80%;
   text-align: center;
   margin: auto;
-  margin-bottom: 30px;
+  margin-bottom: 80px;
   display: flex;
   flex-direction: column;
 }
@@ -88,9 +88,14 @@ main article {
 }
 
 .container {
-  height: 90vh;
   width: 90%;
   align-self: center;
   background-color: #C6C7C4;
-  padding: 10px 10px 10px 10px;
+  padding: 50px 20px 50px 20px;
+}
+
+.container div {
+  text-align: left;
+  font-size: 16pt;
+  padding: 10px 50px 10px 50px;
 }
