--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -1,9 +1,10 @@
 #portfolio {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  gap: 50px;
 }
 
-.art img:hover {
+.image:hover {
   transform: translateY(-10px);
 }
 
@@ -15,22 +16,26 @@
 }
 
 .image {
-  width: fit-content;
-  margin: auto;
+  width: min-content;
+}
+
+img, .image {
+  height: 400px;
 }
 
 .desc {
   display: none;
   position: relative;
-  width: 100%;
-  height: 40px;
+  height: 150px;
   margin: auto;
   background-color: rgba(53, 59, 60, .5);
   color: #EEF0F2;
-  top: -55px;
-  line-height: 40px;
+  top: -175px;
+  text-align: center;
+  text-wrap: wrap;
+  padding-top: 20px;
 }
 
-.art img:hover + .desc {
+.image:hover .desc {
   display: block;
 }
